<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_register_bg"
    tools:context=".ui.RegisterByPhoneActivity">

    <ImageView
        android:id="@+id/register_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:src="@drawable/ic_back_normal"
        android:layout_margin="15dp"
        android:background="@drawable/bg_rank_transparent_grey"
        android:layout_gravity="left|top"/>

    <LinearLayout
        android:id="@+id/register_upload_avatar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/nav_head_view_avatar_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_default_avatar"
            app:civ_border_width="0dp"
            app:civ_border_color="#FF000000"/>


        <TextView
            android:id="@+id/nav_head_view_nickname_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/setting_avatar_select"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextStyle.Primary"
            android:text="@string/register_account"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_login_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditViewTextStyle"
                android:hint="@string/register_input_phone"
                android:inputType="phone"/>
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/container_login_valid_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_login_valid_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/EditViewTextStyle"
                    android:hint="@string/register_input_valid_code"
                    android:inputType="number"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/text_valid_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:padding="5dp"
                android:gravity="center"
                android:textAppearance="@style/TextStyle.Primary"
                android:text="@string/register_send_valid_code"/>
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_input_password"
                style="@style/EditViewTextStyle"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/register_show_pw_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/check_box_bg"
            android:checked="false"
            android:textColor="@color/textColorGray"
            android:textSize="18sp"
            android:text="@string/register_show_password"/>

        <Button
            android:id="@+id/register_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_yellow_bg"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/register_commit"/>

    </LinearLayout>



</LinearLayout>